--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -81,14 +81,12 @@ header div.burger-menu {
     color: white;
     border-radius: 5px;
     background-color: var(--color-celeste);
-    padding: 10px;
-    width: 12vw;
+    padding: 5px;
+    width: 25px;
+    background-position: center;
     margin: auto;
     text-align: center;
-}
-
-main section {
-    background-color: white;
+    border: 1px solid var(--ColorAzul);
 }
 
 footer {
@@ -101,7 +99,6 @@ footer article i {
     font-size: 2em;
     margin-bottom: 10px;
     margin-top: 30px;
-    padding: 10px;
 }
 
 footer p#footer {
