--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,7 +24,8 @@ p {
 
 h2 {
     font-size: 24px;
-    margin: 20px
+    margin-left: 10px;
+    color: var(--color-grisOscuro);
 }
 
 h3 {
@@ -33,7 +34,13 @@ h3 {
 
 h4 {
     font-size: 16px;
-    margin-bottom: 10px;
+}
+
+h6 {
+    color: var(--color-verde);
+    font-size: 14px;
+    padding-bottom: 10px;
+    font-weight: 300;
 }
 
 a {
@@ -41,30 +48,36 @@ a {
     font-weight: 700;
 }
 
+li {
+    list-style: none;
+}
+
 header {
     background-color: var(--color-amarillo);
-    padding-bottom: 30px;
+    padding: 20px;
 }
 
 header img {
     width: 50%;
-    margin-left: 20px;
-    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
-header div.form form input {
-    margin-left: 20px;
-    margin-top: 20px;
-    padding-right: 10px;
+header div input {
+    padding: 4px 10px 3px 4px;
 }
 
-header div.form button {
-    margin-left: 20px;
+header div i {
+    background-color: var(--color-grisClaro);
+    padding: 4px;
+    border: 1px solid var(--color-grisOscuro);
+    border-radius: 2px;
+
 }
+
 
 header h5 {
     text-align: center;
-    margin: 30px;
+    margin: 20px;
     font-size: 300;
 }
 
@@ -77,7 +90,7 @@ header nav ul a {
     color: black;
 }
 
-header div.burger-menu {
+header nav.burger-menu {
     color: white;
     border-radius: 5px;
     background-color: var(--color-celeste);
@@ -87,6 +100,36 @@ header div.burger-menu {
     margin: auto;
     text-align: center;
     border: 1px solid var(--ColorAzul);
+}
+
+main {
+    background-color: var(--color-grisClaro);
+}
+
+.main-section-ultimavisita {
+    padding: 10px;
+}
+
+.main-section-ofertas {
+    padding: 10px;
+}
+
+main section article {
+    margin: 10px;
+    border: 1px solid var(--color-grisOscuro)
+}
+
+main section article div {
+    border-top: 1px solid var(--color-grisClaro);
+    background-color: white;
+    padding: 15px;
+}
+
+main section article div i {
+    color: var(--color-verde);
+    border: 1px solid var(--color-verde);
+    border-radius: 50%;
+    padding: 8px;
 }
 
 footer {
@@ -104,4 +147,30 @@ footer article i {
 footer p#footer {
     color: var(--color-grisOscuro);
     margin: 30px 50px 10px 10px;
+}
+
+/* mobile */
+@media (max-width:360px) {
+    .descripcion {
+        display: none
+    }
+
+    .menu-navegacion {
+        display: none;
+    }
+}
+
+/* tablet y desktop */
+@media (min-width:361) {
+    main section article {
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+
+    header nav.burger-menu {
+        display: none;
+    }
+
+    header nav.menu-navegacion {
+        display: block;
+    }
 }
