--- a/views/home.html
+++ b/views/home.html
@@ -16,16 +16,12 @@
 <body>
     <header>
         <img src="/images/logo-mercado-liebre.svg" alt="home">
-        <div class="form"><!-- Barra Busqueda -->
-            <form action="" class="search">
-                <input type="text" placeholder="Buscar productos, marcas" />
-            </form>
-            <button class="search"><!-- Lupa Busqueda -->
-                <i class="fas fa-search"></i>
-            </button>
+        <!-- Barra Busqueda y Lupa-->
+        <div class="busqueda">
+            <input type="text" placeholder="Buscar productos, marcas"> <i class="fa-solid fa-magnifying-glass"></i>
         </div>
         <h5> <i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</h5>
-        <nav><!-- Menu de Navegacion -->
+        <nav class="menu-navegacion"><!-- Menu de Navegacion -->
             <ul>
                 <li><a href="/views/ofertas.html">Ofertas</strong></a></li>
                 <li><a href="/views/tiendasOficiales.html">Tiendas Oficiales</a></li>
@@ -39,9 +35,9 @@
             </ul>
         </nav>
         <!-- Menu Hamburguesa -->
-        <div class="burger-menu">
+        <nav class="burger-menu">
             <i class="fas fa-bars"></i>
-        </div>
+        </nav>
     </header>
 
     <main>
@@ -54,31 +50,39 @@
             <h2>Basado en tu última visita</h2>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="100%" />
-                <h3 class="precio">$6770</h3>
-                <h6 class="descuento">40% OFF</h6>
-                <h4 class="descripcion">Cafetera Moulinex</h4>
-
+                <div>
+                    <i class="fa-solid fa-truck"></i>
+                    <h3 class="precio">$6770</h3>
+                    <h6 class="descuento">40% OFF</h6>
+                    <h4 class="descripcion">Cafetera Moulinex</h4>
+                </div>
             </article>
             <article>
                 <img src="/images/img-macbook-pro-2019.jpg" alt="macbook" width="100%">
-                <h3 class="precio">$230.000</h3>
-                <h6 class="descuento">20% OFF</h6>
-                <h4 class="descripcion">MacBook Pro 2019</h4>
-
+                <div>
+                    <i class="fa-solid fa-truck"></i>
+                    <h3 class="precio">$230.000</h3>
+                    <h6 class="descuento">20% OFF</h6>
+                    <h4 class="descripcion">MacBook Pro 2019</h4>
+                </div>
             </article>
             <article>
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular" width="100%">
-                <h3 class="precio">$70.500</h3>
-                <h6 class="descuento">10% off</h6>
-                <h4 class="descripcion">Samsung Galaxy S10</h4>
-
+                <div>
+                    <i class="fa-solid fa-truck"></i>
+                    <h3 class="precio">$70.500</h3>
+                    <h6 class="descuento">10% off</h6>
+                    <h4 class="descripcion">Samsung Galaxy S10</h4>
+                </div>
             </article>
             <article>
                 <img src="/images/img-tv-samsung-smart.jpg" alt="tv" width="100%">
-                <h3 class="precio">$23.200</h3>
-                <h6 class="descuento">5% off</h6>
-                <h4 class="descripcion">SmartTv Samsung 43</h4>
-
+                <div>
+                    <i class="fa-solid fa-truck"></i>
+                    <h3 class="precio">$23.200</h3>
+                    <h6 class="descuento">5% off</h6>
+                    <h4 class="descripcion">SmartTv Samsung 43</h4>
+                </div>
             </article>
         </section>
         <!-- seccion ofertas-->
@@ -86,31 +90,39 @@
             <h2>Ofertas</h2>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="100%">
-                <h3 class="precio">$6770</h3>
-                <h6 class="descuento">40% OFF</h6>
-                <h4 class="descripcion">Cafetera Moulinex</h4>
-
+                <div>
+                    <i class="fa-solid fa-truck"></i>
+                    <h3 class="precio">$6770</h3>
+                    <h6 class="descuento">40% OFF</h6>
+                    <h4 class="descripcion">Cafetera Moulinex</h4>
+                </div>
             </article>
             <article>
                 <img src="/images/img-macbook-pro-2019.jpg" alt="macbook" width="100%">
-                <h3 class="precio">$230.000</h3>
-                <h6 class="descuento">20% OFF</h6>
-                <h4 class="descripcion">MacBook Pro 2019</h4>
-
+                <div>
+                    <i class="fa-solid fa-truck"></i>
+                    <h3 class="precio">$230.000</h3>
+                    <h6 class="descuento">20% OFF</h6>
+                    <h4 class="descripcion">MacBook Pro 2019</h4>
+                </div>
             </article>
             <article>
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular" width="100%">
-                <h3 class="precio">$70.500</h3>
-                <h6 class="descuento">10% off</h6>
-                <h4 class="descripcion">Samsung Galaxy S10</h4>
-
+                <div>
+                    <i class="fa-solid fa-truck"></i>
+                    <h3 class="precio">$70.500</h3>
+                    <h6 class="descuento">10% off</h6>
+                    <h4 class="descripcion">Samsung Galaxy S10</h4>
+                </div>
             </article>
             <article>
                 <img src="/images/img-tv-samsung-smart.jpg" alt="tv" width="100%">
-                <h3 class="precio">$23.200</h3>
-                <h6 class="descuento">5% off</h6>
-                <h4 class="descripcion">SmartTv Samsung 43</h4>
-
+                <div>
+                    <i class="fa-solid fa-truck"></i>
+                    <h3 class="precio">$23.200</h3>
+                    <h6 class="descuento">5% off</h6>
+                    <h4 class="descripcion">SmartTv Samsung 43</h4>
+                </div>
             </article>
         </section>
     </main>
