--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,6 +34,7 @@ h3 {
 
 h4 {
     font-size: 16px;
+
 }
 
 h6 {
@@ -41,6 +42,7 @@ h6 {
     font-size: 14px;
     padding-bottom: 10px;
     font-weight: 300;
+    display: inline-block;
 }
 
 a {
@@ -50,35 +52,48 @@ a {
 
 li {
     list-style: none;
+
 }
 
 header {
     background-color: var(--color-amarillo);
-    padding: 20px;
+    padding: 10px;
+    background-size: cover;
 }
 
 header img {
     width: 50%;
-    margin-bottom: 10px;
 }
 
 header div input {
-    padding: 4px 10px 3px 4px;
+    border: 1px solid white;
+    width: 100%;
+    height: 20px;
+    padding: 5px 25px 5px 2px;
+    font-size: 8px;
+    border-radius: 5px;
 }
 
-header div i {
-    background-color: var(--color-grisClaro);
-    padding: 4px;
-    border: 1px solid var(--color-grisOscuro);
-    border-radius: 2px;
-
+.busqueda {
+    float: right;
+    position: absolute;
+    top: -5px;
+    right: 0;
+    margin: 20px 10px;
 }
 
+.menu-navegacion {
+    display: none;
+}
+
+.descripcion {
+    display: none;
+}
 
 header h5 {
     text-align: center;
     margin: 20px;
-    font-size: 300;
+    font-weight: bold;
 }
 
 header nav ul {
@@ -90,17 +105,29 @@ header nav ul a {
     color: black;
 }
 
-header nav.burger-menu {
-    color: white;
-    border-radius: 5px;
-    background-color: var(--color-celeste);
+#lupa {
     padding: 5px;
+    font-size: 9px;
+    color: rgb(100, 100, 100);
+    background-color: white;
+    border-radius: 5px;
+    position: absolute;
+    top: 2px;
+    right: 2px;
+}
+
+.burger-menu {
+    color: white;
+    background-color: var(--color-celeste);
+    padding: 4px;
+    font-size: 15px;
+    border-radius: 5px;
     width: 25px;
-    background-position: center;
     margin: auto;
     text-align: center;
     border: 1px solid var(--ColorAzul);
 }
+
 
 main {
     background-color: var(--color-grisClaro);
@@ -116,25 +143,42 @@ main {
 
 main section article {
     margin: 10px;
-    border: 1px solid var(--color-grisOscuro)
+    border: 1px solid var(--color-grisOscuro);
 }
 
 main section article div {
-    border-top: 1px solid var(--color-grisClaro);
     background-color: white;
-    padding: 15px;
 }
 
-main section article div i {
-    color: var(--color-verde);
-    border: 1px solid var(--color-verde);
+.productos {
+    border-top: solid 1px #ebebeb;
+    padding: 15px;
+    width: 100%;
+    position: relative;
+}
+
+.productos i {
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    color: #39b54a;
+    border: 1px solid #39b54a;
     border-radius: 50%;
-    padding: 8px;
+    position: absolute;
+    right: 20px;
+    top: -15px;
+    transition: .5s ease all;
+}
+
+.productos i:hover {
+    transform: rotate(-90deg);
 }
 
 footer {
     text-align: center;
     background-color: white;
+    padding: 0px 70px;
 }
 
 footer article i {
@@ -149,28 +193,98 @@ footer p#footer {
     margin: 30px 50px 10px 10px;
 }
 
-/* mobile */
-@media (max-width:360px) {
-    .descripcion {
-        display: none
-    }
-
-    .menu-navegacion {
-        display: none;
-    }
-}
-
 /* tablet y desktop */
-@media (min-width:361) {
+@media (min-width:485px) {
     main section article {
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
     }
 
-    header nav.burger-menu {
+    header .header {
+        justify-content: space-between;
+        display: flex;
+    }
+
+    header img {
+        width: 30%;
+    }
+
+    header nav li {
+        display: inline-block;
+        width: auto;
+    }
+
+    header nav ul {
+        display: inline-block;
+        width: auto;
+    }
+
+    header nav ul a {
+        font-size: 10px;
+        margin: 5px;
+    }
+
+    .busqueda {
+        width: 30%;
+        margin: 0px;
+        right: 155px;
+        position: sticky;
+    }
+
+    header h5 {
+        width: 30%;
+        margin: 0px;
+        text-align: right;
+    }
+
+    .burger-menu {
         display: none;
     }
 
-    header nav.menu-navegacion {
+    .menu-navegacion {
         display: block;
+        text-align: center;
+        padding: 20px 0px 0px 0px;
+    }
+
+    .descripcion {
+        display: block;
+    }
+
+    .home-main {
+        margin: 0px;
+        padding: 0px;
+    }
+
+    .home-main-article {
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        width: 45%;
+        display: inline-block;
+    }
+
+    .home-main-UltimaVisita {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .home-main-Ofertas {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+/* solo desktop */
+@media (min-width: 945px) {
+    .home-main-article {
+        width: 22%;
+        display: inline-block;
+    }
+
+    header img {
+        width: 50%;
+    }
+
+    header nav ul a {
+        font-size: 20px;
+        margin: 10px;
     }
 }
