--- a/views/home.html
+++ b/views/home.html
@@ -15,12 +15,18 @@
 
 <body>
     <header>
-        <img src="/images/logo-mercado-liebre.svg" alt="home">
-        <!-- Barra Busqueda y Lupa-->
-        <div class="busqueda">
-            <input type="text" placeholder="Buscar productos, marcas"> <i class="fa-solid fa-magnifying-glass"></i>
+        <div class="header">
+            <div class="logo">
+                <img src="/images/logo-mercado-liebre.svg" alt="home">
+            </div>
+            <!-- Barra Busqueda y Lupa-->
+            <div class="busqueda">
+                <input type="text" placeholder="Buscar productos, marcas"><i id="lupa"
+                    class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <h5> <i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</h5>
         </div>
-        <h5> <i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</h5>
+
         <nav class="menu-navegacion"><!-- Menu de Navegacion -->
             <ul>
                 <li><a href="/views/ofertas.html">Ofertas</strong></a></li>
@@ -34,10 +40,11 @@
                 <li><a href="/views/misCompras.html">Mis compras<i class="fas fa-shopping-basket "></i></a></li>
             </ul>
         </nav>
+
         <!-- Menu Hamburguesa -->
-        <nav class="burger-menu">
+        <div class="burger-menu">
             <i class="fas fa-bars"></i>
-        </nav>
+        </div>
     </header>
 
     <main>
@@ -46,85 +53,105 @@
             <img src="/images/img-home-banner.jpg" alt="home" width="100%">
         </section>
         <!-- seccion ultima visita-->
-        <section class="main-section-ultimavisita">
-            <h2>Basado en tu última visita</h2>
-            <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="100%" />
-                <div>
-                    <i class="fa-solid fa-truck"></i>
-                    <h3 class="precio">$6770</h3>
-                    <h6 class="descuento">40% OFF</h6>
-                    <h4 class="descripcion">Cafetera Moulinex</h4>
-                </div>
-            </article>
-            <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="macbook" width="100%">
-                <div>
-                    <i class="fa-solid fa-truck"></i>
-                    <h3 class="precio">$230.000</h3>
-                    <h6 class="descuento">20% OFF</h6>
-                    <h4 class="descripcion">MacBook Pro 2019</h4>
-                </div>
-            </article>
-            <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular" width="100%">
-                <div>
-                    <i class="fa-solid fa-truck"></i>
-                    <h3 class="precio">$70.500</h3>
-                    <h6 class="descuento">10% off</h6>
-                    <h4 class="descripcion">Samsung Galaxy S10</h4>
-                </div>
-            </article>
-            <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="tv" width="100%">
-                <div>
-                    <i class="fa-solid fa-truck"></i>
-                    <h3 class="precio">$23.200</h3>
-                    <h6 class="descuento">5% off</h6>
-                    <h4 class="descripcion">SmartTv Samsung 43</h4>
-                </div>
-            </article>
-        </section>
-        <!-- seccion ofertas-->
-        <section class="main-section-ofertas">
-            <h2>Ofertas</h2>
-            <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="100%">
-                <div>
-                    <i class="fa-solid fa-truck"></i>
-                    <h3 class="precio">$6770</h3>
-                    <h6 class="descuento">40% OFF</h6>
-                    <h4 class="descripcion">Cafetera Moulinex</h4>
-                </div>
-            </article>
-            <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="macbook" width="100%">
-                <div>
-                    <i class="fa-solid fa-truck"></i>
-                    <h3 class="precio">$230.000</h3>
-                    <h6 class="descuento">20% OFF</h6>
-                    <h4 class="descripcion">MacBook Pro 2019</h4>
-                </div>
-            </article>
-            <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular" width="100%">
-                <div>
-                    <i class="fa-solid fa-truck"></i>
-                    <h3 class="precio">$70.500</h3>
-                    <h6 class="descuento">10% off</h6>
-                    <h4 class="descripcion">Samsung Galaxy S10</h4>
-                </div>
-            </article>
-            <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="tv" width="100%">
-                <div>
-                    <i class="fa-solid fa-truck"></i>
-                    <h3 class="precio">$23.200</h3>
-                    <h6 class="descuento">5% off</h6>
-                    <h4 class="descripcion">SmartTv Samsung 43</h4>
-                </div>
-            </article>
-        </section>
+        <div class="home-main">
+            <section class="main-section-ultimavisita">
+                <h2>Basado en tu última visita</h2>
+                <article class="home-main-article">
+                    <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="100%" />
+                    <div>
+                        <div class="productos">
+                            <i class="fa-solid fa-truck"></i>
+                            <div class="pago">
+                                <h3 class="precio">$6770</h3>
+                                <h6 class="descuento">40% OFF</h6>
+                            </div>
+                            <h4 class="descripcion">Cafetera Moulinex</h4>
+                        </div>
+                    </div>
+                </article>
+                <article class="home-main-article">
+                    <img src="/images/img-macbook-pro-2019.jpg" alt="macbook" width="100%">
+                    <div class="productos">
+                        <i class="fas fa-truck"></i>
+                        <div class="pago">
+                            <h3 class="precio">$6.700</h3>
+                            <h6 class="descuento">40% OFF</h6>
+                        </div>
+                        <h4 class="descripcion"> Mackbook pro-2019</h4>
+                    </div>
+                </article>
+                <article class="home-main-article">
+                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular" width="100%">
+                    <div class="productos">
+                        <i class="fa-solid fa-truck"></i>
+                        <div class="pago">
+                            <h3 class="precio">$70.500</h3>
+                            <h6 class="descuento">10% off</h6>
+                        </div>
+                        <h4 class="descripcion">Samsung Galaxy S10</h4>
+                    </div>
+                </article>
+                <article class="home-main-article">
+                    <img src="/images/img-tv-samsung-smart.jpg" alt="tv" width="100%">
+                    <div class="productos">
+                        <i class="fa-solid fa-truck"></i>
+                        <div class="pago">
+                            <h3 class="precio">$23.200</h3>
+                            <h6 class="descuento">5% off</h6>
+                        </div>
+                        <h4 class="descripcion">SmartTv Samsung 43</h4>
+                    </div>
+                </article>
+            </section>
+            <!-- seccion ofertas-->
+            <section class="main-section-ofertas">
+                <h2>Ofertas</h2>
+                <article class="home-main-article">
+                    <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="100%">
+                    <div class="productos">
+                        <i class="fa-solid fa-truck"></i>
+                        <div class="pago">
+                            <h3 class="precio">$6770</h3>
+                            <h6 class="descuento">40% OFF</h6>
+                        </div>
+                        <h4 class="descripcion">Cafetera Moulinex</h4>
+                    </div>
+                </article>
+                <article class="home-main-article">
+                    <img src="/images/img-macbook-pro-2019.jpg" alt="macbook" width="100%">
+                    <div class="productos">
+                        <i class="fa-solid fa-truck"></i>
+                        <div class="pago">
+                            <h3 class="precio">$230.000</h3>
+                            <h6 class="descuento">20% OFF</h6>
+                        </div>
+                        <h4 class="descripcion">MacBook Pro 2019</h4>
+                    </div>
+                </article>
+                <article class="home-main-article">
+                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular" width="100%">
+                    <div class="productos">
+                        <i class="fa-solid fa-truck"></i>
+                        <div class="pago">
+                            <h3 class="precio">$70.500</h3>
+                            <h6 class="descuento">10% off</h6>
+                        </div>
+                        <h4 class="descripcion">Samsung Galaxy S10</h4>
+                    </div>
+                </article>
+                <article class="home-main-article">
+                    <img src="/images/img-tv-samsung-smart.jpg" alt="tv" width="100%">
+                    <div class="productos">
+                        <i class="fa-solid fa-truck"></i>
+                        <div class="pago">
+                            <h3 class="precio">$23.200</h3>
+                            <h6 class="descuento">5% off</h6>
+                        </div>
+                        <h4 class="descripcion">SmartTv Samsung 43</h4>
+                    </div>
+                </article>
+            </section>
+        </div>
     </main>
 
     <footer>
