--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,290 +1,6 @@
-:root {
-    --color-amarillo: #EAC926;
-    --color-azul: #03264C;
-    --color-celeste: #1259c3;
-    --color-grisOscuro: #666;
-    --color-grisClaro: #ebebeb;
-    --color-verde: #39b54a;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto';
-}
-
-body {
-    background-color: white;
-}
-
-p {
-    font-size: 12px;
-}
-
-h2 {
-    font-size: 24px;
-    margin-left: 10px;
-    color: var(--color-grisOscuro);
-}
-
-h3 {
-    font-size: 18px;
-}
-
-h4 {
-    font-size: 16px;
-
-}
-
-h6 {
-    color: var(--color-verde);
-    font-size: 14px;
-    padding-bottom: 10px;
-    font-weight: 300;
-    display: inline-block;
-}
-
-a {
-    font-size: 16px;
-    font-weight: 700;
-}
-
-li {
-    list-style: none;
-
-}
-
-header {
-    background-color: var(--color-amarillo);
-    padding: 10px;
-    background-size: cover;
-}
-
-header img {
-    width: 50%;
-}
-
-header div input {
-    border: 1px solid white;
-    width: 100%;
-    height: 20px;
-    padding: 5px 25px 5px 2px;
-    font-size: 8px;
-    border-radius: 5px;
-}
-
-.busqueda {
-    float: right;
-    position: absolute;
-    top: -5px;
-    right: 0;
-    margin: 20px 10px;
-}
-
-.menu-navegacion {
-    display: none;
-}
-
-.descripcion {
-    display: none;
-}
-
-header h5 {
-    text-align: center;
-    margin: 20px;
-    font-weight: bold;
-}
-
-header nav ul {
-    margin-bottom: 30px;
-}
-
-header nav ul a {
-    text-decoration: none;
-    color: black;
-}
-
-#lupa {
-    padding: 5px;
-    font-size: 9px;
-    color: rgb(100, 100, 100);
-    background-color: white;
-    border-radius: 5px;
-    position: absolute;
-    top: 2px;
-    right: 2px;
-}
-
-.burger-menu {
-    color: white;
-    background-color: var(--color-celeste);
-    padding: 4px;
-    font-size: 15px;
-    border-radius: 5px;
-    width: 25px;
-    margin: auto;
-    text-align: center;
-    border: 1px solid var(--ColorAzul);
-}
-
-
-main {
-    background-color: var(--color-grisClaro);
-}
-
-.main-section-ultimavisita {
-    padding: 10px;
-}
-
-.main-section-ofertas {
-    padding: 10px;
-}
-
-main section article {
-    margin: 10px;
-    border: 1px solid var(--color-grisOscuro);
-}
-
-main section article div {
-    background-color: white;
-}
-
-.productos {
-    border-top: solid 1px #ebebeb;
-    padding: 15px;
-    width: 100%;
-    position: relative;
-}
-
-.productos i {
-    font-size: 16px;
-    padding: 5px;
-    width: 30px;
-    height: 30px;
-    color: #39b54a;
-    border: 1px solid #39b54a;
-    border-radius: 50%;
-    position: absolute;
-    right: 20px;
-    top: -15px;
-    transition: .5s ease all;
-}
-
-.productos i:hover {
-    transform: rotate(-90deg);
-}
-
-footer {
-    text-align: center;
-    background-color: white;
-    padding: 0px 70px;
-}
-
-footer article i {
-    color: var(--color-celeste);
-    font-size: 2em;
-    margin-bottom: 10px;
-    margin-top: 30px;
-}
-
-footer p#footer {
-    color: var(--color-grisOscuro);
-    margin: 30px 50px 10px 10px;
-}
-
-/* tablet y desktop */
-@media (min-width:485px) {
-    main section article {
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    }
-
-    header .header {
-        justify-content: space-between;
-        display: flex;
-    }
-
-    header img {
-        width: 30%;
-    }
-
-    header nav li {
-        display: inline-block;
-        width: auto;
-    }
-
-    header nav ul {
-        display: inline-block;
-        width: auto;
-    }
-
-    header nav ul a {
-        font-size: 10px;
-        margin: 5px;
-    }
-
-    .busqueda {
-        width: 30%;
-        margin: 0px;
-        right: 155px;
-        position: sticky;
-    }
-
-    header h5 {
-        width: 30%;
-        margin: 0px;
-        text-align: right;
-    }
-
-    .burger-menu {
-        display: none;
-    }
-
-    .menu-navegacion {
-        display: block;
-        text-align: center;
-        padding: 20px 0px 0px 0px;
-    }
-
-    .descripcion {
-        display: block;
-    }
-
-    .home-main {
-        margin: 0px;
-        padding: 0px;
-    }
-
-    .home-main-article {
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
-        width: 45%;
-        display: inline-block;
-    }
-
-    .home-main-UltimaVisita {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .home-main-Ofertas {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-}
-
-/* solo desktop */
-@media (min-width: 945px) {
-    .home-main-article {
-        width: 22%;
-        display: inline-block;
-    }
-
-    header img {
-        width: 50%;
-    }
-
-    header nav ul a {
-        font-size: 20px;
-        margin: 10px;
-    }
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import "/css/general.css";
+@import "/css/variables.css";
+@import "/css/home.css";
+@import "/css/creaTuCuenta.css";
+@import "/css/ingresa.css";
