--- a/views/home.html
+++ b/views/home.html
@@ -6,9 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MercadoLiebre | Home</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/89a4980149.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -29,15 +26,15 @@
 
         <nav class="menu-navegacion"><!-- Menu de Navegacion -->
             <ul>
-                <li><a href="/views/ofertas.html">Ofertas</strong></a></li>
-                <li><a href="/views/tiendasOficiales.html">Tiendas Oficiales</a></li>
-                <li><a href="/views/vender.html">Vender</a></li>
-                <li><a href="/views/ayuda.html">Ayuda</a></li>
+                <li><a href="/ofertas">Ofertas</strong></a></li>
+                <li><a href="/tiendasOficiales">Tiendas Oficiales</a></li>
+                <li><a href="/vender">Vender</a></li>
+                <li><a href="/ayuda">Ayuda</a></li>
             </ul>
             <ul>
-                <li><a href="/views/creaTuCuenta.html">Crea Tu Cuenta<i class="fas fa-credit-card"></i></a></li>
-                <li><a href="/views/ingresa.html">Ingresa<i class="fas fa-sign-in-alt "></i></a></li>
-                <li><a href="/views/misCompras.html">Mis compras<i class="fas fa-shopping-basket "></i></a></li>
+                <li><a href="/creaTuCuenta">Crea Tu Cuenta<i class="fas fa-credit-card"></i></a></li>
+                <li><a href="/ingresa">Ingresa<i class="fas fa-sign-in-alt "></i></a></li>
+                <li><a href="/misCompras">Mis compras<i class="fas fa-shopping-basket "></i></a></li>
             </ul>
         </nav>
 
