--- a/public/css/home.css
+++ b/public/css/home.css
@@ -72,7 +72,7 @@ header nav ul a {
 }
 
 
-main {
+.home-main section {
     background-color: var(--color-grisClaro);
 }
 
@@ -86,7 +86,24 @@ main {
 
 main section article {
     margin: 10px;
-    border: 1px solid var(--color-grisOscuro);
+}
+
+main section article:hover {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+}
+
+.productos h4 {
+    margin: 0;
+    opacity: 0;
+    width: 100%;
+    transition: all 0.5s;
+    overflow: hidden;
+}
+
+.productos:hover .descripcion {
+    display: block;
+    margin-top: 30px;
+    opacity: 1;
 }
 
 main section article div {
@@ -121,7 +138,6 @@ main section article div {
 footer {
     text-align: center;
     background-color: white;
-    padding: 0px 70px;
 }
 
 footer article i {
@@ -131,17 +147,17 @@ footer article i {
     margin-top: 30px;
 }
 
+footer article i:hover {
+    color: var(--color-amarillo)
+}
+
 footer p#footer {
     color: var(--color-grisOscuro);
-    margin: 30px 50px 10px 10px;
+    margin: 30px 0px;
 }
 
 /* tablet y desktop */
 @media (min-width:485px) {
-    main section article {
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    }
-
     header .header {
         justify-content: space-between;
         display: flex;
@@ -190,7 +206,7 @@ footer p#footer {
     }
 
     .descripcion {
-        display: block;
+        display: none;
     }
 
     .home-main {
@@ -199,7 +215,6 @@ footer p#footer {
     }
 
     .home-main-article {
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
         width: 45%;
         display: inline-block;
     }
@@ -229,5 +244,11 @@ footer p#footer {
     header nav ul a {
         font-size: 20px;
         margin: 10px;
+    }
+
+    footer article {
+        width: 26%;
+        display: inline-grid;
+        margin: 15px;
     }
 }
