--- a/public/css/ingresa.css
+++ b/public/css/ingresa.css
@@ -1,57 +1,57 @@
-.login{
-    margin: 0px 20px; 
+.login {
+    margin: 0px 20px;
 }
 
-.login-container{
-  margin: 30px auto;  
-  max-width: 768px;
-  text-align: center;
-  padding: 20px 0px;
+.login-container {
+    margin: 30px auto;
+    max-width: 768px;
+    text-align: center;
+    padding: 20px 0px;
 }
 
-.titular{
+.titular {
     font-size: 24px;
     color: var(--color-grisOscuro);
     max-width: 768px;
     margin-bottom: 5px;
 }
 
-.login-form{
-display: flex;
-flex-wrap: wrap;
-flex-direction: column;
- }
+.login-form {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
 
- .login-form-box{
+.login-form-box {
     padding: 5px;
     width: 100%;
 }
 
-.login-form-box label{
+.login-form-box label {
     width: 100%;
     font-weight: bold;
 }
 
-.login-form-box input{
+.login-form-box input {
     padding: 5px;
     border: none;
     border-radius: 5px;
     width: 100%;
 }
 
- .login-form-button{
-display: flex;
-flex-wrap: wrap;
-justify-content: space-around;
-margin: 18px 5px;
- }
+.login-form-button {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 18px 5px;
+}
 
- .login-form-button a{
+.login-form-button a {
     color: white;
     font-weight: 500;
- }
+}
 
- .login-form-button button{
+.login-form-button button {
     background-color: var(--color-celeste);
     font-size: 16px;
     display: block;
@@ -59,6 +59,9 @@ margin: 18px 5px;
     border: none;
     border-radius: 5px;
     width: 100%;
- }
+}
 
-
+.login-form-button button:hover {
+    background-color: #0022AA;
+    transition: all 0.3s;
+}
